👥 feature: capas del microservicio servicio-clientes